--- a/package.json
+++ b/package.json
@@ -7,21 +7,54 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "preinstall": "typesync"
   },
   "dependencies": {
-    "expo": "~45.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.2",
+    "expo": "^45.0.6",
+    "expo-ads-admob": "^13.0.0",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
+    "firebase": "^9.8.4",
+    "react": "18.0.0",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native": "0.69.1",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/babel__core": "^7.1.19",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/eslint": "^8.4.5",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "17.0.2",
+    "@types/react-native": "^0.69.1",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-keyboard-spacer": "^0.4.2",
+    "@types/react-native-vector-icons": "^6.4.11",
+    "@types/yup": "^0.29.14",
+    "eslint": "^8.19.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
+    "typesync": "^0.9.1"
   },
   "private": true
 }
